@@ -9,6 +9,7 @@
 - vipsthumbnail shrinks to 1/2 window_size: faster and better quality
 - vipsthumbnail defaults to bicubic + nosharpen
 - better rounding behaviour for fixed-point bicubic reduces noise
+- fix pngload with libpng >=1.6.11
 
 4/7/14 started 7.40.4
 - fix vips_rawsave_fd(), thanks aferrero2707 
